kubernetes/services/salamandre/production/adguard-proxy/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers
  namespace: &name adguard-proxy
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    #HSTS
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
