kubernetes/services/salamandre/production/adguard-proxy/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: &name adguard-proxy
  namespace: *name
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - port: 3000
        name: *name
        protocol: TCP
