kubernetes/services/salamandre/production/adguard-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name adguard-proxy
  namespace: *name
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: *name
      protocol: TCP
      port: 3000
      targetPort: 3000
