kubernetes/services/salamandre/production/adguard-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-proxy-web-tls
  namespace: &name adguard-proxy
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: adguard-proxy-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: adguard-proxy-tlsoptions@kubernetescrd
spec:
  rules:
    - host: &host dns.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
    - host: &host2 "*.dns.${DOMAIN_NAME}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: dns-${DOMAIN_NAME/./-}-tls
      hosts:
        - *host
        - *host2
